--- a/class8-materials/Day-08_07-hair-salon-ajmal-khan/css/style.css
+++ b/class8-materials/Day-08_07-hair-salon-ajmal-khan/css/style.css
@@ -14,6 +14,9 @@
     img{
         width: 100%;
     }
+    .pad{
+        padding: 2rem;
+    }
     
         /* style for header */
     header{
@@ -34,10 +37,14 @@
         font-family: 'Fasthand', cursive;
         
     }
-    header nav{
+    nav{
         display: flex;
         flex-direction: column;
         margin-top: 1rem;
+    }
+    .display-none{
+        height: 0;
+        display: none;
     }
     header nav a{
         text-decoration: none;
@@ -56,65 +63,70 @@
         cursor: pointer;
         width: 30;
     }
-@media screen and (min-width:700px) {
-    
-}
+
         /* css for section-1 */
-    /* .sec1{
+    .sec1{
         background-image: url("https://pbs.twimg.com/media/FLUCUd6XECMYEQm?format=jpg&name=4096x4096");
-        background-size: cover;
-        height: 90vh;
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
+        background-position: top center;
         clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
-        position: relative;  
+        position: relative; 
+        width: 100%;
     }
     .sec1 .text{
-       padding: 6rem;
+       padding: 1rem;
        color: white;
     }
     .text h1{
-        font-size: 4rem;
         text-transform: uppercase;
-        width: 40%;
         font-weight: 100;
     }
     .text h5{
         text-transform: uppercase;
         padding: 1rem 0;
         font-weight: 300;
+        width: 50%;
     }
     .text button{
         background-color: black;
         color: white;
-        padding: 1rem;
+        padding: 10px;
         border: white;
-        width: 9rem;
         cursor: pointer;
         text-transform: uppercase;
+        margin: 1rem 0 6rem 0;
     }
-    .fa-solid{
+    .arrow{
         background-color: white;
         color: black;
         border-radius: 50%;
         padding: 1rem;
-        position: absolute;
-        right: 1rem;
-        bottom: 8rem;
         cursor: pointer;
+        position: absolute;
+        right: 2rem;
+        bottom: 8rem;
     }
     .fa-arrow-left{
-        right: 4.1rem;
-    } */
+        right: 5rem;
+    }
+    .arrow{
+        visibility:hidden;
+    }
+
         /* css for card section */
-    /* .card{
+    .card{
         background-color: black;
         color: white;
-        margin: 4rem 6rem;
-        width: 13%;
+        width: 50%;
         padding: 2rem;
-        z-index: 1;
         text-transform: uppercase;
         position: absolute;
-        top: 26rem;
+        top: 15rem;
+        left: 1rem;
+    }
+    .nav-active{
+        top: 31rem;
     }
     .card h4{
         padding: 1rem 0;
@@ -133,44 +145,48 @@
         padding: 1rem;
         margin: 1rem 0;
         border: white;
-        width: 9rem;
+        width: 85%;
         cursor: pointer;
         text-transform: uppercase;
-    } */
+    }
+
         /* css for sec2 */
-    /* .sec2{
-        margin: 12rem 5rem 4rem 5rem;
-        height: 30vh;
+    .sec2{
+        margin: 17rem 0 4rem 0;
+        display: flex;
+        flex-direction: column;
     }
     .sec2 .sec2sub{
-        width: 25%;
-        float: left;
-        margin:  3rem ;
         text-align: center;
+        margin-top: 1rem;
     }
     .sec2sub h3{
         text-transform: uppercase;
         font-family: 'Fasthand', cursive;
     }
-    .sec2sub p{
-        margin-top: 1.2rem;
-    } */
+
         /* css for section-3  */
-    /* .sec3{
+    .sec3{
         background-color: whitesmoke;
-        height: 60vh;
+        /* height: 60vh; */
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
     .sec3 img{
-        width: 300px;
+        /* width: 300px; */
+        margin: 2rem 0;
     }
     .sub{
-        width: 30%;
-        float: left;
-        margin: 3rem 6rem;
+        width: 80%;
+        text-align: center;
+        /* float: left;
+        margin: 3rem 6rem; */
+        
     }
     .sec3 .sec3sub1{
-        margin-left: 15rem;
-        margin-right: 1rem;
+        /* margin-left: 15rem;
+        margin-right: 1rem; */
     }
     .sec3sub1 h2{
         text-transform: uppercase;
@@ -188,22 +204,18 @@
         width: 8rem;
         text-transform: uppercase;
         cursor: pointer;
-    } */
+    }
     
             /* css for section-4 */
-    /* .sec4{
-        margin: 3rem 8rem;
-        height: 50vh;
-    }
-    .sec4 img{
-        width: 200px;
+    .sec4{
+        display: flex;
+        flex-direction: column;
     }
     .sub1{
         position: relative;
     }
     .sec4 .sub1{
-        float: left;
-        margin: 2rem 5rem;
+        margin: 2rem ;
     }
     .sec4 .sub2{
         background-color: black;
@@ -212,18 +224,19 @@
         padding: .5rem 0;
         width: 80%;
         position: absolute;
-        left: 1.1rem;
+        left: 2.3rem;
         bottom: -1.1rem;
-    } */
+    }
+
             /* css for section-5 */
-    /* .sec5{
-        height: 70vh;
-        margin: 3rem 8rem;
+    .sec5{
         background-image: url('https://media.istockphoto.com/id/1376080879/photo/cheerful-smiling-model-profile-side-view-brunette-beauty-woman-with-nude-make-up-smooth-skin.webp?b=1&s=170667a&w=0&k=20&c=EwQKeDTwl5rGk_9d585dBPxz2DabnGFd9P8cndquhqo=');
-        background-size: cover;
+        background-size: 100% auto;
+        background-repeat: no-repeat;
+        background-position: center;
     }
     .sec5 .sub{
-        margin: 7rem ;
+        text-align: left;
         color: white;
     }
     .sec5 h5{
@@ -240,21 +253,20 @@
         font-weight: 900;
     }
     .sec5 button{
-        padding: 10px 5px ;
-        width: 50%;
+        padding: 10px ;
         background-color: black;
         color: white;
         border: none;
         outline: none;
         cursor: pointer;
         text-transform: uppercase;
-    } */
-    
+    }
+
             /* style for section-6 */
-    /* .sec6 {
+     .sec6 {
         text-transform: uppercase;
         text-align: center;
-        margin: 6rem 8rem;
+        margin: 6rem auto;
     }
     .sec6 hr{
         width: 1.3rem;
@@ -263,12 +275,94 @@
         border: 2px solid black;
     }
             /* style for section 7 */
-    .sec7{
-        margin: 0 8rem;
+     .sec7{
+        margin: 0 auto;
         display: flex;
-        flex-wrap: wrap
+        align-items: flex-start; 
+        height: 100vh; 
+        flex-wrap: wrap;
     }
     .sec7 img{
         width: 200px;
-        
-    } */
+        height: auto;
+    } 
+
+        /* media-query for desktop */
+@media screen and (min-width:800px) {
+        /* for desktop header */
+header{
+flex-direction: row;
+justify-content: space-between;
+}
+.fa-bars{
+display: none;
+}
+header nav{
+flex-direction: row;
+width: 50%;
+justify-content: space-around;
+}
+.display-none{
+height: auto;
+display: flex;
+}
+header nav a{
+margin:0 .3rem;
+}
+    /* Section-1  */
+.sec1{
+background-size: 100% auto;
+background-position:top center;
+height: 600px;
+}
+.sec1 .text{
+padding: 6rem;
+}
+.text h1{
+font-size: 4rem;
+width: 40%;
+}
+.text h5{
+width: auto;
+}
+.text button{
+padding: 1rem;
+width: 9rem;
+}
+.arrow{
+visibility: visible;
+}
+        /* card  */
+.card{
+    width: 30%;
+    top: 32rem;
+    left: 6rem;
+}
+        /* section-2  */
+.sec2{
+    flex-direction: row;
+}
+.sec2sub{
+    margin: 0 1rem;
+}
+            /* section-3  */
+.sec3{
+    flex-direction: row;
+    justify-content: space-around;
+}
+.sub{
+    width: 40%;
+}
+            /* section-4  */
+.sec4{
+    flex-direction: row;
+}
+            /* section-5  */
+.sec5{
+    background-size: cover;
+    height: 70vh;
+}
+.sec5 .sub{
+    margin-top: 5rem;
+}
+}
