--- a/class45-HomeWorkProject-3/public/css/style.css
+++ b/class45-HomeWorkProject-3/public/css/style.css
@@ -3,6 +3,70 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
 header{
-    background-color: whitesmoke;
+    background-color: rgb(97, 96, 96);
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    padding: 1rem 4rem;
+}
+
+header ul{
+    display: flex;
+    align-items: center;
+}
+header nav{
+    display: flex;
+}
+ul li{
+    list-style: none;
+}
+header a{
+    text-decoration: none;
+    color: white;
+    margin: 0 1rem;
+    font-weight: 700;
+}
+.container{
+    padding: 2rem 4rem;
+    flex-grow: 1;
+}
+footer{
+    background-color: rgb(97, 96, 96);
+    color: white;
+    font-weight: 800;
+    text-align: center;
+    padding: 1rem;
+}
+                    /* style for compose page  */
+form{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 2rem 0;
+}
+form input{
+    margin-bottom: 1rem;
+    padding: 10px;
+    outline: none;
+}
+form textarea{
+    padding: 1rem;
+    outline: none;
+}
+form button{
+    margin-top: 1rem;
+    width: 4rem;
+    padding: 10px;
+    background-color: rgb(22, 22, 240);
+    color: white;
+    border-radius: 10px;
+    border: none;
+    outline: none;
+    cursor: pointer;
 }
