--- a/class45-HomeWorkProject-3/views/partials/footer.ejs
+++ b/class45-HomeWorkProject-3/views/partials/footer.ejs
@@ -3,6 +3,6 @@
 <footer>
     <p>Made by SABA AZEEM😉</p>
 </footer>
-<script src="js/main.js"></script>
+<script src="/js/main.js"></script>
 </body>
 </html>
